--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wmc-travel-agency-website",
+  "name": "wmc-travel-agency",
   "version": "1.0.0",
   "description": "A wizarding world travel agency website",
   "main": "app.js",
@@ -9,17 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "bcrypt": "^5.1.0",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.4.0",
+    "joi": "^17.9.2",
+    "joi-password-complexity": "^5.2.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.1",
     "mongoose-findorcreate": "^4.0.0",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
   }
 }
