--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "A wizarding world travel agency website",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "build": "npm i"
   },
   "author": "",
   "license": "ISC",
